--- a/template3.html
+++ b/template3.html
@@ -214,7 +214,10 @@
 
         <div class="Contact-container">
             <div class="Contact-container-2">
-                <button class="envelope-button"><i class="bi-envelope"></i></button>
+                <div class="envelope-div">
+                    <button class="envelope-button"><i class="bi-envelope"></i></button>
+                </div>
+                
                 <h1>Get in touch</h1>
                 <h3>We'd love to hear from you</h3>
                 
